# Celery

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: main.py
app/api/prediction/controllers/: prediction_controller.py
app/api/prediction/routers/: prediction.py
app/api/prediction/schemas/: prediction_schema.py
app/api/prediction/services/: prediction_service.py
